Add update rentals
